idk some crap i tried

--- a/assets/style.css
+++ b/assets/style.css
@@ -32,6 +32,11 @@ textarea{
   margin-bottom: 5px;
 }
 
+.center{
+  text-align: center;
+  border-radius: 15px;
+}
+
 .time-block{
   text-align: center;
   border-radius: 15px;
