--- a/assets/style.css
+++ b/assets/style.css
@@ -48,11 +48,11 @@ textarea{
   margin-bottom: 2px;
 } 
 
-.row {
+/* .row {
   white-space: pre-wrap;
   height: 80px;
   border-top: 1px solid white;;
-}
+} */
 
 .hour {
   background-color: #ffffff;
